[package]
name = "ascension-chess"
version = "0.1.0"
edition = "2024"
default-run = "ascension-chess"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
macroquad = "0.4.14"
resvg = "0.45.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tiny-skia = "0.11.4"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
usvg = "0.45.1"
